Fix issue with large accordion display on Safari - add display: inline-block; to accordion-h

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600&family=Raleway:wght@300;400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&family=Poppins&display=swap'); */
 
 /* colors 
 #fff9ec - off white
@@ -346,10 +346,10 @@ section p {
     left: 70px;
     width: 460px; 
     box-shadow: 0 0 0 1px rgb(255 255 255 / 60%);
-    /* -webkit-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out; */
+    -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 
@@ -374,7 +374,7 @@ section p {
  
 
 .accordion-h {
-    /* display: inline-block; */
+    display: inline-block;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
     margin: 0;
@@ -395,10 +395,10 @@ section p {
 
 
 .serv-container input:checked ~ div {
-    /* -webkit-transition: all 0.7s ease-in-out;
+    -webkit-transition: all 0.7s ease-in-out;
     -moz-transition: all 0.7s ease-in-out;
     -o-transition: all 0.7s ease-in-out;
-    -ms-transition: all 0.7s ease-in-out; */
+    -ms-transition: all 0.7s ease-in-out;
     transition: all 0.7s ease-in-out;
     left: 460px;
 }
